# ccv

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  GEMINI.md  HARNESS_ENGINEERING_REPORT.md  LICENSE  README.md  coding_style.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
apps/DIPDemoQt/: .gitignore  CMakeLists.txt  README.md
apps/DIPDemoQt/ImageFileOpt/: ImageFileOpt.h
apps/DIPDemoQt/ImageProcess/: CVImgProc.cpp  SkinDetector.cpp  SkinDetector.h
apps/DIPDemoQt/QSS/: StyleSheet.qss
apps/DIPDemoQt/SubWindow/: SelChannelDlg.cpp  SelColorReduceDivDlg.cpp  SelColorReduceDivDlg.h  SelFlipTypeDlg.cpp  SelFlipTypeDlg.h  SelThreshDlg.cpp  SelThreshDlg.ui
apps/camkit/cam_ros/: CMakeLists.txt  README.md
apps/camkit/rs_camera/: CMakeLists.txt  rs_d435i.cc
apps/camkit/stereo_cam_mipi/: CMakeLists.txt
apps/stereo_reconstruct/: CMakeLists.txt  README.md  package.xml
apps/stereo_reconstruct/src/: stereo_reconstruct.cpp
camera_relates/cam_calib_rectify/calib_charuco/: CMakeLists.txt
camera_relates/cam_calib_rectify/stereo_fisheye_rectify/: CMakeLists.txt
core/: CMakeLists.txt  README.md  package.xml
core/cmake_modules/: cgocv_config.h.in  doxyfile.config
core/include/cgocv/: features2d.h  image.h  image_ocv.h  nonmax_suppression.h  pointcloud3d_ogl.h  stereo_camera.h
core/include/cvkit/: common.h  common_cv.h  features2d.h  features2d_fast.h  image.h  mathtools.h  nonmax_suppression.h  stereo_camera.h
core/src/: features2d.cc  features2d_fast.cc  image.cc  image_ocv.cc  mathtools.cc  pointcloud3d_ogl.cc  stereo_camera.cc
core/src/cv/: calib3d.cpp  corner_detector.cpp  features2d.cc  features2d_fast.cc  image.cc  image_filtering.cpp  image_ocv.cc  pointcloud3d.cc  pointcloud3d_ogl.cc  stereo_camera.cc  types.cpp  undistort.cpp  visual_tracking.cpp
core/src/kinematics/: convertor.cpp  quarternion.cpp  rotation_matrix.cpp
core/src/maths/: math_basics.cpp  mathtools.cc  matrix.cpp  random_numbers.cpp  svd_fulluv.cpp  vector.cpp
core/test/: CMakeLists.txt  foo_environment.h  test_image.cpp
core/unit_test/: CMakeLists.txt  foo_environment.h  gtest_main.cpp  test_cv.cpp  test_image.cpp  test_kinematics.cpp  test_math.cpp
cv_apps/epipolar_geometry/sgm_cuda/: CMakeLists.txt
cv_apps/epipolar_geometry/stereo_map/: CMakeLists.txt
cv_cam/camera_roswrapper/cam_v4l2/: CMakeLists.txt  cam_v4l2.cpp
cv_cam/stereo_cam_mipi/: package.xml
cv_cam/stereo_cam_mipi/include/: rkisp_interface.h
cv_cam/stereo_cam_mipi/src/: mipi_camera.cpp  mipi_ros_node.cpp
cv_core/: CMakeLists.txt
cv_core/cmake_modules/: build_doxyfile.cmake  cgocv_config.h.in
cv_core/include/cgocv/: camera.h  features2d_fast.h  image_ocv.h  stereo_camera.h
cv_core/src/: image.cc  image_ocv.cc  pointcloud3d_ogl.cc  stereo_camera.cc
cv_core/test/: gtest_main.cpp  test_image.cpp
cv_libs/opencv/: CMakeLists.txt
cv_libs/opencv/BackProject/: CMakeLists.txt
cv_libs/opencv/Camera/: CMakeLists.txt
cv_libs/opencv/Histogram/: CMakeLists.txt
cv_libs/opencv/compute_orb/: CMakeLists.txt
cv_libs/opencv/distance_transform/: CMakeLists.txt  distance_transform.h  main.cpp
cv_libs/opencv/edge_detection/: CMakeLists.txt  EdgeDetection_Canny.cpp  edge_detection_canny.cpp
cv_libs/opencv/good_features_to_track/: CMakeLists.txt  good_features_to_track.cpp
cv_libs/opencv/image_convertor/: yuv2rgb.cpp
cv_libs/opencv/line_features/: CMakeLists.txt  line_match.cpp
cv_libs/opencv/ocr_opencv/: train.py
cv_libs/opencv/projective_transformation/: CMakeLists.txt  img_warp_homography.cpp
cv_libs/pangolin/: CMakeLists.txt  demo01.cc  demo03.cc  demo06.cc
cv_libs/pangolin/slam_visualization/: custom_struct.h  slam_visualizer.cpp
dip_demos/compute_orb/: CMakeLists.txt  compute_orb_01.cpp
epipolar_geometry/bm_ssd_opencl/: CMakeLists.txt
libs/opengl/: CMakeLists.txt
pose_estimation/: CMakeLists.txt
python/: .ruff.toml  README.md  pyproject-poetry.toml  pyproject.toml  requirements.txt  uv.toml
python/libccv/: README.md  hough_detect_line.py  img_brightness.py  img_fisheye_mask.py  img_match_graph.py  img_statistic.py  img_to_bin.py  imtools.py  pil_demo.py  pylab_demo.py
python/libccv/base_models/: __init__.py  lenet.py  lenet_layer_activate.py  lenet_model_check.py  lenet_model_export_onnx.py  net00.py  net_binary_classification.py
python/libccv/common/: __init__.py  camera_utils.py  dataset.py  fft_utils.py  image_processor.py  imtools.py  logger.py  plot_utils.py  statistics_processor.py  utils.py
python/libccv/deep_features/: README.md  cvt_onnx_rknn.py  cvt_pth_onnx.py  demo_superpoint.py  infer_super_point_rknn.py  op_update.py
python/libccv/fft/: fft_denoise_image.py  fft_fde.py  fft_ocv_01.py  fft_ocv_02.py  fft_ocv_hpf.py
python/libccv/keypoint_detection/: hand_gesture_detection.py  hand_keypoints_detection.py  keypoint_rcnn_00.py  keypoint_rcnn_detector.py
python/libccv/object_detection/: __init__.py  detector.py  faster_rcnn_detector.py  od_rcnn.py
python/libccv/semantic_segmentation/: __init__.py  seg_img.py  seg_video.py  segmentation_processor.py
python/libccv/web_cam_fastapi/: README.md  camera.py  main.py  requirements.txt
python/libccv/yolo/: .gitignore  infer_yolov5.py  yolo11_00.py  yolov11_01.py  yolov8_sam.py
python/visual_ai/common/: utils.py
python/visual_ai/keypoint_detection/: keypoint_rcnn_00.py
python/visual_ai/semantic_segmentation/: seg_img.py  seg_video.py
python/visual_ai/yolo/: infer_yolov5.py
sfm/mapping/: CMakeLists.txt
sfm/mapping_monocular/: CMakeLists.txt
sfm/mapping_rgbd/: CMakeLists.txt
unit_test/: CMakeLists.txt  foo_environment.h  gtest_main.cpp  math_utils.hpp  test_cv.cpp  test_image.cpp  test_kinematics.cpp  test_math.cpp
vkit/: .gitignore  CMakeLists.txt  README.md
vkit/config/: Doxyfile.config
vkit/docs/: 公共算法库概要设计.md
vkit/include/cv/: calib3d.h  corner_detector.h  yimg.h  (+3 more)
vkit/unit_test/: CMakeLists.txt  gtest_main.cpp  math_utils.hpp  test_cv.cpp  test_kinematics.cpp  test_math.cpp
(+692 files in other folders)
