<package>
  <name>cgocv</name>
  <version>0.0.0</version>
  <description>This is a ROS-Package for lib cgocv</description>

  <maintainer email="gaohongchen01@hotmail.com">maintained by: GaoHongchen</maintainer>

  <license>GPL</license>

  <author>GaoHongchen</author>
  <author email="gaohongchen01@hotmail.com">GaoHongchen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lcgocv" cflags="-I${prefix}/cgocv/include/"/>
  </export>
</package>
