<package>
  <name>ccv</name>
  <version>0.0.0</version>
  <description>This is a ROS-Package for lib ccv</description>

  <maintainer email="cggos@outlook.com">maintained by: Gavin Gao</maintainer>

  <license>GPL</license>

  <author>Gavin Gao</author>
  <author email="cggos@outlook.com">Gavin Gao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lcv_cg" cflags="-I${prefix}/ccv/include/"/>
  </export>
</package>
