[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "libccv"
version = "1.0.0"
authors = [
    { name = "Gavin Gao", email = "cggos@outlook.com" },
]
description = "Open Chenguang Computer Vision library in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    #    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/cggos/ccv"

[tool.setuptools]
packages = ["libccv"]
