[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libccv"
version = "1.0.0"
authors = [
    { name = "Gavin Gao", email = "cggos@outlook.com" },
]
description = "Open Chenguang Computer Vision library in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    #    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydot",
    "scipy",
    "matplotlib",
    "opencv-python",
    #    "opencv-python-headless",
    "dlib",
]

[project.optional-dependencies]
torch = [
    "torch==2.6.0+cpu",
    "torchvision==0.21.0+cpu",
    "torchinfo",
]
mp = [
    "mediapipe"
]
yolo = [
    "inference",
    "inference[transformers]",
    "ultralytics",
]

[project.urls]
"Homepage" = "https://github.com/cggos/ccv"

[tool.setuptools]
packages = ["libccv"]
